--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Completed - NewsFlash | Home</title>
+    <title>NewsFlash | Home</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon.png">
     <!-- Remix icons -->
@@ -346,7 +346,7 @@
                     </a>
                     <!-- Slides -->
                     <a href="#" class="article swiper-slide">
-                        <img src="./assets/images/quick_read/quick_read_6.jpg" alt="" class="article-image">
+                        <img src="./assets/images/quick_read/quick_read_1.jpg" alt="" class="article-image">
 
                         <div class="article-data-container">
                             <div class="article-data">
