--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NewsFlash | Home</title>
+    <title>NewsBlog | Home</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon.png">
     <!-- Remix icons -->
@@ -577,7 +577,7 @@
             
             <div class="company-data">
                 <a href="./index.html">
-                    <h2 class="logo">NewsFlash</h2>
+                    <h2 class="logo">NewsBlog</h2>
                 </a>
                 <p class="company-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, iure. Harum, animi dolores, nam, ad magni expedita.</p>
                 
